--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "start": "cd src && node server.js",
-    "build": "echo 'No build step required for backend'",
+    "build": "npm install && cd src && npm install",
     "postinstall": "cd src && npm install"
   },
   "engines": {
