--- a/src/client/netlify.toml
+++ b/src/client/netlify.toml
@@ -1,10 +1,12 @@
 [build]
   base = "src/client"
   publish = "build"
-  command = "npm run build"
+  command = "CI=false npm run build"
 
 [build.environment]
   NODE_VERSION = "18"
+  CI = "false"
+  GENERATE_SOURCEMAP = "false"
 
 [[redirects]]
   from = "/*"
