--- a/src/client/package.json
+++ b/src/client/package.json
@@ -21,7 +21,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
+    "build:netlify": "CI=false npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
