[mod]修改登陆页面的标题显示文字

--- a/src/client/public/manifest.json
+++ b/src/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "培训管理系统",
-  "name": "培训管理系统 - Training Management System",
+  "short_name": "智课云培训管理系统v0.1",
+  "name": "智课云培训管理系统v0.1 - Training Management System",
   "icons": [
     {
       "src": "favicon.ico",
